--- a/app/globals.css
+++ b/app/globals.css
@@ -154,3 +154,39 @@
   background: url(../assets/ellipse2.png) no-repeat top right;
   background-size: contain;
 }
+
+
+.carousel-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.carousel-inner {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.svg-logo {
+  filter: hue-rotate(120deg) saturate(2) brightness(0.8);
+}
+
+.dot {
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 50%;
+}
+
+.dot-active {
+  width: 1.5rem;
+  height: 0.75rem; 
+  border-radius: 0.375rem;
+  background-color: #024430; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  transition: width 0.3s ease, height 0.3s ease, background-color 0.3s ease;
+}
+
+
