--- a/app/globals.css
+++ b/app/globals.css
@@ -189,4 +189,18 @@
   transition: width 0.3s ease, height 0.3s ease, background-color 0.3s ease;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Internet Explorer and Edge */
+.scrollbar-hide::-ms-scrollbar {
+  display: none;
+}
+
 
